--- a/nft-preview-card-component-main/nft.html
+++ b/nft-preview-card-component-main/nft.html
@@ -23,7 +23,7 @@
             <img src="image-avatar.png" alt="" class="avatar">
             <p class="person">Creation of <span>Jules Wyvern</span></p>
         </div>
-        
+        <!--i was here-->
     </div>
 </body>
 </html>
